--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="Challenge.main.css">
+  <link rel="stylesheet" href="Challenge/style.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center" style="background-image: url(https://media.wired.co.uk/photos/606da8809a15f73a597a1f76/master/w_1600,c_limit/Navelgazing.jpg); background-size: 100%;">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1 class="text-primary">Belly Button Biodiversity Dashboard</h1>
+        <p class="text-primary">Use the interactive charts below to explore the dataset</p>
      
       </div>
     </div>
